src/bindings.rs

    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).post) as usize - ptr as usize },
        624usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(post)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).inputctl) as usize - ptr as usize },
        632usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(inputctl)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).marker) as usize - ptr as usize },
        640usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(marker)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entropy) as usize - ptr as usize },
        648usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(entropy)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).idct) as usize - ptr as usize },
        656usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(idct)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).upsample) as usize - ptr as usize },
        664usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(upsample)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cconvert) as usize - ptr as usize },
        672usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(cconvert)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cquantize) as usize - ptr as usize },
        680usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_decompress_struct),
            "::",
            stringify!(cquantize)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct jpeg_error_mgr {
    pub error_exit: ::std::option::Option<unsafe extern "C" fn()>,
    pub emit_message: ::std::option::Option<unsafe extern "C" fn()>,
    pub output_message: ::std::option::Option<unsafe extern "C" fn()>,
    pub format_message: ::std::option::Option<unsafe extern "C" fn()>,
    pub reset_error_mgr: ::std::option::Option<unsafe extern "C" fn()>,
    pub msg_code: ::std::os::raw::c_int,
    pub msg_parm: jpeg_error_mgr__bindgen_ty_1,
    pub trace_level: ::std::os::raw::c_int,
    pub num_warnings: ::std::os::raw::c_long,
    pub jpeg_message_table: *const *const ::std::os::raw::c_char,
    pub last_jpeg_message: ::std::os::raw::c_int,
    pub addon_message_table: *const *const ::std::os::raw::c_char,
    pub first_addon_message: ::std::os::raw::c_int,
    pub last_addon_message: ::std::os::raw::c_int,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union jpeg_error_mgr__bindgen_ty_1 {
    pub i: [::std::os::raw::c_int; 8usize],
    pub s: [::std::os::raw::c_char; 80usize],
}
#[test]
fn bindgen_test_layout_jpeg_error_mgr__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<jpeg_error_mgr__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jpeg_error_mgr__bindgen_ty_1>(),
        80usize,
        concat!("Size of: ", stringify!(jpeg_error_mgr__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<jpeg_error_mgr__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(jpeg_error_mgr__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr__bindgen_ty_1),
            "::",
            stringify!(i)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).s) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr__bindgen_ty_1),
            "::",
            stringify!(s)
        )
    );
}
#[test]
fn bindgen_test_layout_jpeg_error_mgr() {
    const UNINIT: ::std::mem::MaybeUninit<jpeg_error_mgr> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jpeg_error_mgr>(),
        168usize,
        concat!("Size of: ", stringify!(jpeg_error_mgr))
    );
    assert_eq!(
        ::std::mem::align_of::<jpeg_error_mgr>(),
        8usize,
        concat!("Alignment of ", stringify!(jpeg_error_mgr))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error_exit) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(error_exit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).emit_message) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(emit_message)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).output_message) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(output_message)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).format_message) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(format_message)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).reset_error_mgr) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(reset_error_mgr)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).msg_code) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(msg_code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).msg_parm) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(msg_parm)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).trace_level) as usize - ptr as usize },
        124usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(trace_level)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).num_warnings) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(num_warnings)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jpeg_message_table) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(jpeg_message_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).last_jpeg_message) as usize - ptr as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(last_jpeg_message)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).addon_message_table) as usize - ptr as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(addon_message_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).first_addon_message) as usize - ptr as usize },
        160usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(first_addon_message)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).last_addon_message) as usize - ptr as usize },
        164usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_error_mgr),
            "::",
            stringify!(last_addon_message)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_progress_mgr {
    pub progress_monitor: ::std::option::Option<unsafe extern "C" fn()>,
    pub pass_counter: ::std::os::raw::c_long,
    pub pass_limit: ::std::os::raw::c_long,
    pub completed_passes: ::std::os::raw::c_int,
    pub total_passes: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_jpeg_progress_mgr() {
    const UNINIT: ::std::mem::MaybeUninit<jpeg_progress_mgr> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<jpeg_progress_mgr>(),
        32usize,
        concat!("Size of: ", stringify!(jpeg_progress_mgr))
    );
    assert_eq!(
        ::std::mem::align_of::<jpeg_progress_mgr>(),
        8usize,
        concat!("Alignment of ", stringify!(jpeg_progress_mgr))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).progress_monitor) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_progress_mgr),
            "::",
            stringify!(progress_monitor)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pass_counter) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_progress_mgr),
            "::",
            stringify!(pass_counter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pass_limit) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_progress_mgr),
            "::",
            stringify!(pass_limit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).completed_passes) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_progress_mgr),
            "::",
            stringify!(completed_passes)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).total_passes) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(jpeg_progress_mgr),
            "::",
            stringify!(total_passes)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_destination_mgr {
    pub next_output_byte: *mut JOCTET,
    pub free_in_buffer: usize,
    pub init_destination: ::std::option::Option<unsafe extern "C" fn()>,
    pub empty_output_buffer: ::std::option::Option<unsafe extern "C" fn() -> boolean>,
    pub term_destination: ::std::option::Option<unsafe extern "C" fn()>,
}
